methods.picture.PictureMono2.scala.error
Erreur de compilation :
PictureMono2:28: error: Unit does not take parameters
  faireMotif()
            ^